--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,9 @@ services:
   bot:
     build: .
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+        
     environment:
       DATABASE_URL: postgresql://v2raybot:v2raypass123@postgres:5432/v2ray_bot_db
     restart: unless-stopped
