--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,12 @@ services:
     ports:
       - "5432:5432"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U v2raybot -d v2ray_bot_db"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 10s
 
   bot:
     build: .
