--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "migrate": "node dist/database/migrate.js"
   },
   "dependencies": {
-    "telegraf": "^4.12.2",
-    "pg": "^8.11.0",
+    "telegram-format": "^1.0.3",
     "dotenv": "^16.3.1",
-    "uuid": "^9.0.0",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "pg": "^8.11.0",
+    "telegraf": "^4.12.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
     "@types/pg": "^8.10.2",
     "@types/uuid": "^9.0.2",
-    "typescript": "^5.1.6",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   }
 }
