--- a/.env
+++ b/.env
@@ -32,3 +32,7 @@ FINGERPRINT_ANDROID=android
 FINGERPRINT_WINDOWS=chrome
 FINGERPRINT_MACOS=firefox
 FINGERPRINT_LINUX=chrome
+
+
+
+CARD_OWNER="احمدی"
