--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ BOT_TOKEN=8448355905:AAHwmdVukp5M6TG0oSH_B5FHTQoqk90ozFs
 DATABASE_URL=postgresql://v2raybot:v2raypass123@localhost:5432/v2ray_bot_db
 
 # Admin Configuration (comma-separated Telegram Chat IDs)
-ADMIN_CHAT_IDS=7902336604
+ADMIN_CHAT_IDS=7902336604,164316812
 
 # Payment Configuration
 PAYMENT_CARD_NUMBER=1234-5678-9012-3456
