--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   postgres:
     image: postgres:15-alpine
     environment:
+      POSTGRES_HOST_AUTH_METHOD: scram-sha-256
       POSTGRES_USER: v2raybot
       POSTGRES_PASSWORD: v2raypass123
       POSTGRES_DB: v2ray_bot_db
