added user configs key

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DATABASE_URL=postgresql://v2raybot:v2raypass123@localhost:5432/v2ray_bot_db
 ADMIN_CHAT_IDS=7902336604,164316812
 
 # Payment Configuration
-PAYMENT_CARD_NUMBER="6037 99872 1242 1235"
+PAYMENT_CARD_NUMBER="6219 8618 0065 6539"
 BOT_ADMIN_ID=V2chainAdmin
 # Tutorial Channel
 TUTORIAL_CHANNEL=https://t.me/nexus_vpn1
@@ -33,4 +33,4 @@ FINGERPRINT_LINUX=chrome
 
 
 
-CARD_OWNER="کیان خالدیان"
+CARD_OWNER="محسن کرمی"
