enabled database backup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,22 +34,22 @@ services:
       - ./src:/app/src
       - ./uploads:/app/uploads
 
-  # postgres-backup:
-  #   image: postgres:15-alpine
-  #   depends_on:
-  #     - postgres
-  #   volumes:
-  #     - ./backups/postgres:/backups
-  #   environment:
-  #     PGPASSWORD: v2raypass123
-  #   entrypoint: >
-  #     sh -c "while true; do
-  #     pg_dump -h postgres -U v2raybot v2ray_bot_db > /backups/backup_$$(date +%Y-%m-%d_%H-%M-%S).sql;
-  #     ls -tp /backups | grep -v '/$$' | tail -n +8 | xargs -I {} rm -- /backups/{};
-  #     sleep 86400;
-  #     done"
+  postgres-backup:
+    image: postgres:15-alpine
+    depends_on:
+      - postgres
+    volumes:
+      - ./backups/postgres:/backups
+    environment:
+      PGPASSWORD: v2raypass123
+    entrypoint: >
+      sh -c "while true; do
+      pg_dump -h postgres -U v2raybot v2ray_bot_db > /backups/backup_$$(date +%Y-%m-%d_%H-%M-%S).sql;
+      ls -tp /backups | grep -v '/$$' | tail -n +8 | xargs -I {} rm -- /backups/{};
+      sleep 86400;
+      done"
 
-  #   restart: unless-stopped
+    restart: unless-stopped
 
 volumes:
   postgres_data:
